método de inserir na resposta numa resposta e correções de bugs